| Summary: | ASTERISK-24225: Dial option z is broken | ||
| Reporter: | dimitripietro (dimitripietro) | Labels: | |
| Date Opened: | 2014-08-12 17:42:28 | Date Closed: | 2014-08-17 18:08:53 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_dial |
| Versions: | 11.11.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Centos 6 64 bits / Asterisk 11.11.0 / Polycom VVX 500 running the latest version 5.1.2 | Attachments: | ( 0) jira_asterisk_24225_v1.8.patch ( 1) jira_asterisk_24225_v11.patch ( 2) myDebugLog.0 |
| Description: | Not sure exactly since which version but at least since 11.6.0 the option z in dial is not working anymore.
For example : Dial(SIP/237,25,z) and I setup a call forward on no answer on my Polycom phone after let say 2 ring (12 secondes). After 12 secondes, the call is routed back to Asterisk : Now forwarding SIP/provider-00000008 to 'Local/84186687810@test' (thanks to SIP/237-0000000b) The option z is suppose to disable the dial time but instead after 25 seconds total I get : Nobody picked up in 25000 ms If you need more information, don't hesitate Thx ! | ||
| Comments: | By: Matt Jordan (mjordan) 2014-08-12 21:18:36.521-0500 We require a complete debug log to help triage the issue. This document will provide instructions on how to collect debugging logs from an Asterisk machine for the purpose of helping bug marshals troubleshoot an issue: https://wiki.asterisk.org/wiki/display/AST/Collecting+Debug+Information By: dimitripietro (dimitripietro) 2014-08-12 21:34:45.636-0500 It's a debug log By: Richard Mudgett (rmudgett) 2014-08-13 10:32:27.704-0500 [^jira_asterisk_24225_v1.8.patch] and [^jira_asterisk_24225_v11.patch] should fix the dial z option. By: dimitripietro (dimitripietro) 2014-08-16 13:43:15.747-0500 I confirm the patch is working for Asterisk 11.11.0 | ||